StarAdd some initial model association logic. Start views. Add more gems.

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  database: notesapp_test
 
 production:
   <<: *default
+  database: notesapp_production
